Adição dos links, dos alt e title. Configuração das UTM

--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
     <table width="600" border="0" celpadding="0" cellspacing="0" align="center">
         <tr>
             <td width="600" border="0" celpadding="0" cellspacing="0" align="center" style="padding: 0;">
-                <img src="assets/images/image_drinkandclub (10).png" alt="">
+                <img src="assets/images/image_drinkandclub (10).png"  alt="Os utensílios que não podem faltar no seu bar" title="Os utensílios que não podem faltar no seu bar">
             </td>
         </tr>
         <table width="600" border="0" celpadding="0" cellspacing="0" align="center">
             <tr>
                 <td width="600" border="0" celpadding="0" cellspacing="0" align="center" style="padding: 0;">
                     <a href="" target="_blank">
-                        <img src="assets/images/image_drinkandclub (11).png" alt="">
+                        <img src="assets/images/image_drinkandclub (11).png" alt="Quer impressionar e deixar a sua marca na hora de preparar drinks saborosos? Com os utensílios certos você garante praticidade e elegância! Saiba mais na página Mastertips dentro de Drink & Clubs" title="Quer impressionar e deixar a sua marca na hora de preparar drinks saborosos? Com os utensílios certos você garante praticidade e elegância! Saiba mais na página Mastertips dentro de Drink & Clubs">
                     </a>
                 </td>
             </tr>
@@ -106,17 +106,17 @@
             <tr>
                 <td width="228" border="0" celpadding="0" cellspacing="0" align="center" style="padding: 0;">
                     <a href="" target="_blank">
-                        <img src="assets/images/image_drinkandclub (12).png" alt="">
+                        <img src="assets/images/image_drinkandclub (12).png" alt="Dosador" title="Dosador">
                     </a>
                 </td>
                 <td width="201" border="0" celpadding="0" cellspacing="0" align="center" style="padding: 0;">
                     <a href="" target="_blank">
-                        <img src="assets/images/image_drinkandclub (13).png" alt="">
+                        <img src="assets/images/image_drinkandclub (13).png" alt="Descascador" title="Descascador">
                     </a>
                 </td>
                 <td width="231" border="0" celpadding="0" cellspacing="0" align="center" style="padding: 0;">
                     <a href="" target="_blank">
-                        <img src="assets/images/image_drinkandclub (14).png" alt="">
+                        <img src="assets/images/image_drinkandclub (14).png" alt="Colher Bailarina" title="Colher Bailarina">
                     </a>
                 </td>
             </tr>
@@ -124,8 +124,8 @@
         <table width="600" border="0" celpadding="0" cellspacing="0" align="center">
             <tr>
                 <td width="600" border="0" celpadding="0" cellspacing="0" align="center" style="padding: 0;">
-                    <a href="">
-                        <img src="assets/images/image_drinkandclub (15).png" alt="">
+                    <a href="https://www.drinksandclubs.com.br/mastertips/movie#Conheca-os-utensilios-que-nao-podem-faltar-no-seu-bar/?utm_source=Salesforce&utm_medium=email&utm_campaing=13052024_monteseubar_clubs_broad&utm_content=CTA_1" target="_blank">
+                        <img src="assets/images/image_drinkandclub (15).png" alt="Curtiu? Veja o conteúdo completo e monte agora o seu próprio bar :) Vem queremos brindar com você! Saiba mais" title="Curtiu? Veja o conteúdo completo e monte agora o seu próprio bar :) Vem queremos brindar com você! Saiba mais">
                     </a>
                 </td>
             </tr>
@@ -133,8 +133,15 @@
         <table width="600" border="0" celpadding="0" cellspacing="0" align="center">
             <tr>
                 <td width="600" border="0" celpadding="0" cellspacing="0" align="center" style="padding: 0;">
-                    <a href="">
-                        <img src="assets/images/image_drinkandclub (16).png" alt="">
+                    <img src="assets/images/image_drinkandclub (16).png" alt="Aproveite para garantir os utensílios do seu bar aqui, em Drinks & Club:" title="Aproveite para garantir os utensílios do seu bar aqui, em Drinks & Club:">
+                </td>
+            </tr>
+        </table>
+        <table width="600" border="0" celpadding="0" cellspacing="0" align="center">
+            <tr>
+                <td width="600" border="0" celpadding="0" cellspacing="0" align="center" style="padding: 0;">
+                    <a href="https://www.drinksandclubs.com.br/dosador-25ml-50ml-beefeater/p/?utm_source=Salesforce&utm_medium=email&utm_campaing=13052024_monteseubar_clubs_broad&utm_content=dosador_beefeater" target="_blank">
+                        <img src="assets/images/image_drinkandclub (17).png" alt="Dosador Beefeater 25ml/50ml R$49,90 Comprar" title="Dosador Beefeater 25ml/50ml R$49,90 Comprar">
                     </a>
                 </td>
             </tr>
@@ -142,8 +149,8 @@
         <table width="600" border="0" celpadding="0" cellspacing="0" align="center">
             <tr>
                 <td width="600" border="0" celpadding="0" cellspacing="0" align="center" style="padding: 0;">
-                    <a href="">
-                        <img src="assets/images/image_drinkandclub (17).png" alt="">
+                    <a href="https://www.drinksandclubs.com.br/tapetedebarchivasregal/p/?utm_source=Salesforce&utm_medium=email&utm_campaing=13052024_monteseubar_clubs_broad&utm_content=tapete_chivas_tegal" target="_blank">
+                        <img src="assets/images/image_drinkandclub (18).png" alt="Tapete de bar Chivas Regal R$84,90 Comprar" title="Tapete de bar Chivas Regal R$84,90 Comprar">
                     </a>
                 </td>
             </tr>
@@ -151,8 +158,8 @@
         <table width="600" border="0" celpadding="0" cellspacing="0" align="center">
             <tr>
                 <td width="600" border="0" celpadding="0" cellspacing="0" align="center" style="padding: 0;">
-                    <a href="">
-                        <img src="assets/images/image_drinkandclub (18).png" alt="">
+                    <a href="https://www.drinksandclubs.com.br/canecaabsolutmule/p/?utm_source=Salesforce&utm_medium=email&utm_campaing=13052024_monteseubar_clubs_broad&utm_content=caneca_absolut" target="_blank">
+                        <img src="assets/images/image_drinkandclub (19).png" alt="Caneca Absolut Mule R$39,90 Comprar" title="Caneca Absolut Mule R$39,90 Comprar">
                     </a>
                 </td>
             </tr>
@@ -160,16 +167,7 @@
         <table width="600" border="0" celpadding="0" cellspacing="0" align="center">
             <tr>
                 <td width="600" border="0" celpadding="0" cellspacing="0" align="center" style="padding: 0;">
-                    <a href="">
-                        <img src="assets/images/image_drinkandclub (19).png" alt="">
-                    </a>
-                </td>
-            </tr>
-        </table>
-        <table width="600" border="0" celpadding="0" cellspacing="0" align="center">
-            <tr>
-                <td width="600" border="0" celpadding="0" cellspacing="0" align="center" style="padding: 0;">
-                    <img src="assets/images/image_drinkandclub (20).png" alt="">
+                    <img src="assets/images/image_drinkandclub (20).png" alt="BEBA COM MODERAÇÃO E NÃO COMPARTILHE COM MENORES DE 18 ANOS *promoção válida enquanto durarem os estoques" title="BEBA COM MODERAÇÃO E NÃO COMPARTILHE COM MENORES DE 18 ANOS *promoção válida enquanto durarem os estoques">
                 </td>
             </tr>
         </table>
@@ -178,19 +176,19 @@
     <table width="600" border="0" celpadding="0" cellspacing="0" align="center">
         <tr>
             <td width="228" border="0" celpadding="0" cellspacing="0" align="center" style="padding: 0;">
-                <a href="" target="_blank">
-                    <img src="assets/images/image_drinkandclub (21).png" alt="">
+                <a href="https://www.baraberto.com.br/?utm_source=Salesforce&utm_medium=email&utm_campaing=13052024_monteseubar_clubs_broad&utm_content=footer_logo_Drink_And_Clubs" target="_blank">
+                    <img src="assets/images/image_drinkandclub (21).png" alt="Logo Drink And Clubs" title="Logo Drink And Clubs">
                 </a>
             </td>
             <td border="0" celpadding="0" cellspacing="0" align="center" style="padding: 0;">
-                <img src="assets/images/image_drinkandclub (22).png" alt="">
+                <img src="assets/images/image_drinkandclub (22).png" alt="Experiências vivindas com boas bebidas" title="Experiências vivindas com boas bebidas">
             </td>
         </tr>
 
         <table width="600" border="0" celpadding="0" cellspacing="0" align="center"
             <tr>
                 <td width="600" border="0" celpadding="0" cellspacing="0" align="center">
-                    <img src="assets/images/image_drinkandclub (23).png" alt="">
+                    <img src="assets/images/image_drinkandclub (23).png" alt="sac@lojadrinksandclubs.com.br|(11)4935-2357|Segunda a sexta-feira, da 9h às 18h" title="sac@lojadrinksandclubs.com.br|(11)4935-2357|Segunda a sexta-feira, da 9h às 18h">
                 </td>
             </tr>
         </table>
